--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(core)
 add_subdirectory(assignments/assignment0)
 add_subdirectory(assignments/assignment1)
 add_subdirectory(assignments/assignment2)
+add_subdirectory(assignments/assignment3Maybe)
 add_subdirectory(assignments/worksession0)
 add_subdirectory(assignments/worksession1)
 add_subdirectory(assignments/worksession2)
